[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Sprites/Mate_Random.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Bandage_Normal.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Water_Worried.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Kevlar_Normal.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Mate.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/High_Health.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MateHealthDisplay.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/Mate_Dead.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Kevlar_Happy.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Kevlar_Worried.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Kevlar_Panic.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Water_Happy.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Water_Normal.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Water_Panic.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Bandage_Happy.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Bandage_Worried.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Mate_Needed_Of_Bandage_Panic.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "kevlar",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "bandage",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 12 ) ],
"loop": true,
"name": "water",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19, 24 )

[node name="Mate" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MateRefillZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MateRefillZone"]
shape = SubResource( 3 )

[node name="HealthDisplay" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="HealthBar" type="TextureProgress" parent="HealthDisplay"]
margin_left = -19.0
margin_top = -30.0
margin_right = -8.0
margin_bottom = -27.0
rect_scale = Vector2( 3.5, 3 )
value = 100.0
texture_progress = ExtResource( 6 )

[node name="HealthTimer" type="Timer" parent="."]

[node name="RefillTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="MateRefillZone" to="." method="_on_MateRefillZone_body_entered"]
[connection signal="body_exited" from="MateRefillZone" to="." method="_on_MateRefillZone_body_exited"]
[connection signal="timeout" from="HealthTimer" to="." method="_on_HealthTimer_timeout"]
[connection signal="timeout" from="RefillTimer" to="." method="_on_RefillTimer_timeout"]
